# muninn-local-mcp

./: README.md  pyproject.toml
src/muninn_local/: __main__.py  chroma_store.py  config.py  embeddings.py  memory.py  project.py  server.py
tests/: test_chroma_store.py  test_config.py  test_embeddings.py  test_memory.py  test_project.py  test_server.py
