[project]
name = "muninn-local-mcp"
version = "0.1.0"
description = "Local MCP server for project memory with vector semantic search"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9",
    "chromadb>=0.6",
    "httpx>=0.28",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/muninn_local"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
